# SovereignAudio

./: .gitignore  Makefile  README.md  calendar_ics.py  chunker.py  config.py  database.py  debug_import.py  diarizer.py  embedder.py  file_manager.py  fts_index.py  gui_debug.py  gui_helpers.py  importer.py  library_reconcile.py  library_store.py  main.py  pyproject.toml  rebuild_index.py  recorder.py  requirements.txt  searcher.py  server.py  settings.json  settings.py  transcribe_folder.py  vector_store.py  vocab.py  voiceprints.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/hooks/: useAudio.ts
frontend/src/pages/: Dashboard.tsx  LivePage.tsx  NotFound.tsx  SearchPage.tsx  SessionsPage.tsx  SettingsPage.tsx  TranscriptPage.tsx  UploadPage.tsx  VocabPage.tsx
